--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script type="text/javascript" src="lib/keymaster.js"></script>
   
   <script type="text/javascript" src="lib/utils.js"></script>
+  <script type="text/javascript" src="lib/vectors.js"></script>
+  <script type="text/javascript" src="lib/worm.js"></script>
   <script type="text/javascript" src="lib/game.js"></script>
   <script type="text/javascript" src="lib/gameView.js"></script>
 
