--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
 	<title>Uncle Worm</title>
   
-  <script type="text/javascript" src="lib/keymaster.js"></script>
-  
+  <script type="text/javascript" src="lib/key.js"></script>
   <script type="text/javascript" src="lib/utils.js"></script>
   <script type="text/javascript" src="lib/vectors.js"></script>
   <script type="text/javascript" src="lib/worm.js"></script>
